--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
-AccountLimitFix
-===============
+CCS Pro 1.0.13
+==============
 
-  - Only return controller commands the user making the request has access to
+Bug fixes:
+ - Only return controller commands the user making the request has access to
