MODELER-519: Updated changes log
git-svn-id: https://openremote.svn.beanstalkapp.com/beehive/workspace/ebariaux/ControllerProxyAndCommandService_ProInstaller_1_1_0@327 2bd35c9c-1000-49a5-b779-596279832df3

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,11 @@
 CCS Pro 1.1.0
 =============
 
+New features:
+ - Change ControllerProxyAndCommandService to use plain sockets instead of nio and add SSL support (MODELER-519)
+
 Fixes:
-  - Remove IR related library, not used in this project
+ - Remove IR related library, not used in this project
 
 CCS Pro 1.0.13
 ==============
